<resources>
    <string name="app_name">Time Master</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Time Master</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_UpdateFragment">Update</string>
    <string name="action_settings">Settings</string>

    <string name="Dashboard">Dashboard</string>
    <string name="GoalSScreen">Goal Screen</string>
    <string name="TimerScreen">Timer Screen</string>
    <string name="Achievements_Screen">Achievements Screen</string>
    <string name="Project_Task_Management_Screen">Project and Task Management Screen</string>
    <string name="Settings_Screen">Settings Screen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="answer_prompt">Pick an answer</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Signup">Signup</string>
    <string name="SignupBtn">Signup</string>
    <string name="backLogin">Return to login</string>
    <string name="CreateTab">CreateTab</string>
</resources>